--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,5 +1,6 @@
-.App {
+.container {
   display: flex;
+  flex-direction: row;
   justify-content: center;
-  font-size: 30px;
+  font-family: 'Roboto';
 }
