--- a/src/components/Cart/Cart.scss
+++ b/src/components/Cart/Cart.scss
@@ -1,4 +1,14 @@
-.cart {
+.cart-container {
   order: 2;
   flex-grow: 1;
+  border-left: 1px solid #000000;
+
+  display: flex;
+  flex-direction: column;
+}
+
+.cart-list {
+  margin: 10px;
+  display: flex;
+  flex-direction: column;
 }
