--- a/src/components/ProductList/ProductList.scss
+++ b/src/components/ProductList/ProductList.scss
@@ -1,10 +1,17 @@
+.product-list-container {
+  order: 1;
+  max-width: 66%;
+
+  @media only screen and (min-width: 1250px) {
+    max-width: 75%;
+  }
+}
+
 h2 {
   text-align: center;
 }
 
 .product-list {
-  order: 1;
-  flex-grow: 3;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
