Add mobile layout

--- a/src/components/ProductDescription/ProductDescription.scss
+++ b/src/components/ProductDescription/ProductDescription.scss
@@ -1,14 +1,16 @@
 .product-description {
   display: flex;
+  margin: 0 5px 5px 5px;
 
-  & .name {
+  .name {
     font-weight: bold;
+    margin-right: 5px;
   }
 
-  & .text {
+  .text {
     position: relative;
 
-    & .tooltip {
+    .tooltip {
       visibility: hidden;
       position: absolute;
       z-index: 1;
@@ -27,6 +29,10 @@
     &:hover > .tooltip {
       visibility: visible;
       opacity: 1;
+    }
+
+    @media only screen and (max-width: 768px) {
+      display: none;
     }
   }
 }
