--- a/src/components/Cart/Cart.scss
+++ b/src/components/Cart/Cart.scss
@@ -5,10 +5,25 @@
 
   display: flex;
   flex-direction: column;
+
+  .title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .title > i {
+    display: none;
+  }
 }
 
-.cart-list {
-  margin: 10px;
-  display: flex;
-  flex-direction: column;
+@media only screen and (max-width: 768px) {
+  .cart-container {
+    border-left: none;
+
+    .title > i {
+      display: block;
+      margin-right: 25px;
+    }
+  }
 }
