--- a/src/components/CartListItem/CartListItem.scss
+++ b/src/components/CartListItem/CartListItem.scss
@@ -6,22 +6,33 @@
   border: 1px solid #000000;
   border-radius: 6px;
 
-  & .content {
-    flex-grow: 3;
-    display: flex;
-    flex-direction: column;
-    margin-left: 10px;
-  }
-
-  & img {
+  img {
     max-width: 25%;
   }
 
-  & .quantity {
-    margin: 0 5px;
+  .content {
+    flex-grow: 3;
+    display: flex;
+    flex-direction: column;
+    margin: 0 0 10px 10px;
+    justify-content: space-between;
+
+    > p {
+      font-weight: bold;
+    }
+
+    .quantity {
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+
+      span {
+        margin: 0 5px;
+      }
+    }
   }
 
-  & .item-total-price {
+  .item-total-price {
     flex-grow: 1;
     text-align: right;
     margin-right: 5px;
