--- a/src/components/Checkout/Checkout.scss
+++ b/src/components/Checkout/Checkout.scss
@@ -2,10 +2,24 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  align-items: center;
   margin: 10px;
 
-  & span {
+  span {
     font-weight: bold;
     margin-left: 10px;
+  }
+
+  .button {
+    display: flex;
+    align-items: center;
+    border: 2px solid #000000;
+    border-radius: 6px;
+    padding: 5px;
+    cursor: pointer;
+
+    &:hover {
+      background-color: grey;
+    }
   }
 }
