--- a/src/components/ProductListItem/ProductListItem.scss
+++ b/src/components/ProductListItem/ProductListItem.scss
@@ -6,4 +6,8 @@
   padding: 5px;
   border: 1px solid #000000;
   border-radius: 6px;
+
+  @media only screen and (max-width: 768px) {
+    max-width: 150px;
+  }
 }
