--- a/src/components/Cart/Cart.scss
+++ b/src/components/Cart/Cart.scss
@@ -15,6 +15,13 @@
   .title > i {
     display: none;
   }
+
+  .cart-empty-message {
+    display: flex;
+    justify-content: center;
+    font-size: 20px;
+    margin-top: 50px;
+  }
 }
 
 @media only screen and (max-width: 768px) {
