--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -8,3 +8,11 @@
 .material-icons {
   cursor: pointer;
 }
+
+.loader {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  margin-top: -40px;
+  margin-left: -40px;
+}
