--- a/src/components/Checkout/Checkout.scss
+++ b/src/components/Checkout/Checkout.scss
@@ -22,4 +22,8 @@
       background-color: grey;
     }
   }
+
+  @media only screen and (max-width: 768px) {
+    margin: 10px 10px 70px 10px;
+  }
 }
