--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -5,14 +5,29 @@
   font-family: 'Roboto';
 }
 
-.material-icons {
-  cursor: pointer;
-}
-
 .loader {
   position: fixed;
   top: 50%;
   left: 50%;
   margin-top: -40px;
   margin-left: -40px;
+}
+
+.title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 15px 0;
+
+  .icon-button {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .title > .icon-button {
+    display: block;
+    position: absolute;
+    right: 5%;
+  }
 }
