--- a/src/components/CartListItem/CartListItem.scss
+++ b/src/components/CartListItem/CartListItem.scss
@@ -14,27 +14,40 @@
     flex-grow: 3;
     display: flex;
     flex-direction: column;
-    margin: 0 0 10px 10px;
+    margin: 0 0 0 10px;
     justify-content: space-between;
 
-    > p {
-      font-weight: bold;
+    .product-name {
+      font-weight: 500;
     }
 
     .quantity {
       display: flex;
       justify-content: flex-start;
       align-items: center;
+      margin-top: 10px;
 
-      span {
+      p {
         margin: 0 5px;
+      }
+
+      .icon-button {
+        padding: 5px;
       }
     }
   }
 
   .item-total-price {
-    flex-grow: 1;
-    text-align: right;
-    margin-right: 5px;
+    margin: 0 5px;
+  }
+
+  @media only screen and (max-width: 768px) {
+    .content {
+      margin: 10px 0 10px 10px;
+    }
+
+    .item-total-price {
+      margin: 10px 10px 0 0;
+    }
   }
 }
