--- a/src/components/ProductDescription/ProductDescription.scss
+++ b/src/components/ProductDescription/ProductDescription.scss
@@ -1,38 +1,22 @@
 .product-description {
-  display: flex;
   margin: 0 5px 5px 5px;
 
-  .name {
-    font-weight: bold;
-    margin-right: 5px;
+  .header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 10px 2.5px;
+    height: 48px;
   }
 
-  .text {
-    position: relative;
-
-    .tooltip {
-      visibility: hidden;
-      position: absolute;
-      z-index: 1;
-      opacity: 0;
-      transition: opacity 0.5s;
-      background-color: #555;
-      width: 200px;
-      color: #fff;
-      text-align: center;
-      padding: 5px;
-      border-radius: 6px;
-      bottom: 0;
-      left: 0;
-    }
-
-    &:hover > .tooltip {
-      visibility: visible;
-      opacity: 1;
-    }
+  .product-name {
+    font-weight: 600;
+    line-height: 1.5;
+    margin-right: 10px;
 
     @media only screen and (max-width: 768px) {
-      display: none;
+      font-weight: 500;
+      line-height: 1;
     }
   }
 }
