--- a/src/components/ProductStock/ProductStock.scss
+++ b/src/components/ProductStock/ProductStock.scss
@@ -4,5 +4,9 @@
   justify-content: space-between;
   align-items: center;
   height: 30px;
-  margin: auto 5px 0 5px;
+  margin: auto 0 0 5px;
+
+  .add-product-icon {
+    padding: 5px;
+  }
 }
