--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,8 +1,5 @@
 .container {
   display: flex;
-  flex-direction: row;
-  justify-content: center;
-  font-family: 'Roboto';
 }
 
 .loader {
@@ -27,7 +24,8 @@
 @media only screen and (max-width: 768px) {
   .title > .icon-button {
     display: block;
-    position: absolute;
-    right: 5%;
+    position: fixed;
+    right: 20px;
+    bottom: 20px;
   }
 }
