--- a/src/components/Cart/Cart.scss
+++ b/src/components/Cart/Cart.scss
@@ -1,10 +1,9 @@
 .cart-container {
-  order: 2;
-  flex-grow: 1;
   border-left: 1px solid #000000;
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100vw;
 
   .cart-empty-message {
     font-size: 20px;
