--- a/src/components/Cart/Cart.scss
+++ b/src/components/Cart/Cart.scss
@@ -1,9 +1,9 @@
 .cart-container {
   border-left: 1px solid #000000;
   display: flex;
+  flex-grow: 1;
   flex-direction: column;
   align-items: center;
-  width: 100vw;
 
   .cart-empty-message {
     font-size: 20px;
@@ -14,5 +14,6 @@
 @media only screen and (max-width: 768px) {
   .cart-container {
     border-left: none;
+    width: 100vw;
   }
 }
