--- a/src/components/CartList/CartList.scss
+++ b/src/components/CartList/CartList.scss
@@ -2,4 +2,8 @@
   display: flex;
   flex-direction: column;
   margin: 10px;
+
+  @media only screen and (max-width: 768px) {
+    width: 90%;
+  }
 }
